templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: osm-service
spec:
  type: ClusterIP
  selector:
    run: avatarsolver-osm
  ports:
  - name: osm
    port: 7001
    targetPort: 7001
